--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,20 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* .App{
+  width: 50px;
+  height: 50px;
+  border: 5px solid black;
+  border-top: 5px solid rgb(100, 100, 100) ;
+  border-radius: 50%;
+  animation: App 1.5s linear infinite;
+    }
+
+@keyframes App {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
